<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_signinorupScreenPrimary"
    tools:context=".ui.AuthSignIn">

    <!-- Background image -->
    <ImageView
        android:id="@+id/catImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cat"
        android:layout_gravity="bottom|center_horizontal"
        android:contentDescription="@string/imageDescription_cat"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter" />

    <!-- Foreground container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/foregroundContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- App Bar -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/dark_signinorupScreenPrimary"
                app:navigationIcon="@drawable/ic_arrow_back_white"
                app:title=""/>
        </com.google.android.material.appbar.AppBarLayout>

        <!-- Login Fields -->
        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="35dp"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.25">

            <!-- Welcome Back Text -->
            <TextView
                android:id="@+id/tvWelcomeBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/welcome_back"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Email Text Field -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/white"
                app:startIconDrawable="@drawable/ic_mail"
                app:startIconTint="@null"
                app:startIconContentDescription="@string/prompt_email"
                app:boxStrokeColor="@drawable/text_input_outline_color"
                app:hintTextColor="@drawable/text_input_hint_color"
                app:cursorColor="@color/white"
                app:errorTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Spacing -->
            <View
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <!-- Password Text Field -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:id="@+id/passwordLayout"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@null"
                app:endIconMode="password_toggle"
                app:endIconDrawable="@drawable/password_toggle_selector"
                app:endIconTint="@color/white"
                app:endIconContentDescription="Show password"
                app:boxStrokeColor="@drawable/text_input_outline_color"
                app:hintTextColor="@drawable/text_input_hint_color"
                app:errorTextColor="@color/white"
                app:cursorColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Spacing -->
            <View
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <!-- Error Message Text -->
            <TextView
                android:id="@+id/errorTextSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/errorColor"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                android:gravity="start"
                android:paddingHorizontal="5dp"
                android:visibility="gone"/>

            <!-- Sign In Button -->
            <Button
                android:id="@+id/signInButtonAuthToHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/action_sign_in"
                android:textAllCaps="false" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>