<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kernelcrew.moodapp.ui.MoodComments">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/soft_pink"
            android:elevation="4dp"
            android:clickable="true"
            android:focusable="true"
            app:navigationIcon="@drawable/ic_back"
            app:title="Mood Comments"
            app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/moodContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/topAppBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/usernameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text=""
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:id="@+id/imageMoodIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvMoodState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/dayTimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/viewDetailsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View Details" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">

                <TextView
                    android:id="@+id/commentCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text=""
                    android:paddingStart="16dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="Comments"
                    android:paddingStart="6dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">
                </TextView>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/medium_grey"
                />


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            app:layout_constraintTop_toBottomOf="@id/moodContainer"
            app:layout_constraintBottom_toTopOf="@+id/searchInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_comment" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchInputLayout"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_search_bar"
            app:boxBackgroundMode="none"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            app:endIconDrawable="@drawable/ic_send_icon"
            app:endIconMode="custom"
            app:startIconCheckable="false"
            app:layout_constraintTop_toBottomOf="@id/commentRecyclerView"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:hintEnabled="false"
            app:hintAnimationEnabled="false"
            app:endIconTint="@null"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchInput"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="26dp"
                android:paddingEnd="56dp"
                android:gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/comment_hint_comments_page"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_navigation_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>